# Helicon

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README-zh.md  README.md
.codex/: requirements.toml
.github/workflows/: ci.yml
Examples/: main.cpp
Src/Codegen/: BuiltinVariate.h  ComputePipelineObject.h  ControlFlows.h  CustomLibrary.h  MathProxy.h  ParseHelper.h  RasterizedPipelineObject.h  TypeAlias.h  VariateProxy.h
Src/Codegen/AST/: AST.cpp  AST.hpp  Enum.hpp  Node.hpp  Parser.cpp  Parser.hpp  Struct.hpp
Src/Codegen/Generator/: SlangGenerator.cpp  SlangGenerator.hpp
Src/Compiler/: ShaderCodeCompiler.cpp  ShaderCodeCompiler.h  ShaderHardcodeManager.cpp  ShaderHardcodeManager.h  ShaderLanguageConverter.cpp  ShaderLanguageConverter.h
Src/Compiler/HardcodeShaders/: HardcodeShaders.cpp  HardcodeShaders.h
docs/: architecture.md  build.md  code-style.md  doc-sync.md  github-workflow.md  project-structure.md  testing.md
docs/zh/: architecture.md  build.md  code-style.md  doc-workflow.md  github-workflow.md  project-structure.md  testing.md
examples/triangle_graph/: main.cpp
include/: helicon.h  rhi.h  rhiHLSL.h  utils.h
include/helicon/: helicon.hpp
include/rhi/: abi.h  binding.h  command_list.h  coopvec.h  core.h  device.h  format.h  pipeline.h  raytracing.h  resource.h  resources.h  shader.h
scripts/: build.ps1  test.ps1
skills/prepare-github-pr/: SKILL.md
skills/run-regression/: SKILL.md
skills/sync-docs/: SKILL.md
src/: helicon.c  render_graph.cpp  rhi.cpp  rhi_internal.hpp
src/backends/vulkan/: vulkan_backend.cpp
src/shaders/: builtin_triangle_spirv.hpp
tests/: helicon_smoke_test.cpp  helicon_test.c  render_graph_test.cpp
